@@ -4,7 +4,7 @@ dnl
 dnl Copyright (c) 2012-2015, 2018-2019,
 dnl Technische Universitaet Dresden, Germany
 dnl
-dnl Copyright (c) 2015, 2018, 2021,
+dnl Copyright (c) 2015, 2018, 2021-2022,
 dnl Forschungszentrum Juelich GmbH, Germany
 dnl
 dnl This software may be modified and distributed under the terms of
@@ -119,7 +119,7 @@ AC_LANG_POP([C])
 
 # Checks for programs.
 AFS_PROG_CC([99])
-AFS_PROG_CXX
+AFS_PROG_CXX([11])
 
 LT_PREREQ([2.4.6])
 LT_INIT([shared disable-static])
