@@ -4,7 +4,7 @@ dnl
 dnl Copyright (c) 2017, 2019,
 dnl Technische Universitaet Dresden, Germany
 dnl
-dnl Copyright (c) 2018, 2021,
+dnl Copyright (c) 2018, 2021-2022,
 dnl Forschungszentrum Juelich GmbH, Germany
 dnl
 dnl This software may be modified and distributed under the terms of
@@ -128,7 +128,7 @@ AC_CANONICAL_BUILD
 AC_CANONICAL_HOST
 
 AFS_PROG_CC([99])
-AFS_PROG_CXX
+AFS_PROG_CXX([11])
 
 LT_PREREQ([2.4.6])
 LT_INIT([disable-shared])
